--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -559,107 +559,107 @@ stories:
   domain: http://www.thefranklinpress.com/
   link: https://www.thefranklinpress.com/cops-kids-go-shopping-christmas
 images:
-- name: udnie-IMG_4564.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4564.jpg
-- name: server-cloud-server-racks-clouds-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-nazi-poster.jpg
-- name: oldcabin-store-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-really-hot.jpg
-- name: eduardo-eduardo-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-three.jpg
-- name: nazi-invasion-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-car_35892468014_o.jpg
-- name: server-cloud1-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
-- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-- name: bluelake-creativity-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-01-17-38.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-- name: fence-mexico-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
-- name: locked-up-steam-lock-up-steam-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
-- name: oldhouse-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-soul.jpg
-- name: yosemite-yosemite-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-dali.jpg
-- name: razorwire-DSC-0080-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-oily-mcoilface.jpg
-- name: supreme-court-supremecourt-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
-- name: mosaic-face-mosaic-face-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
-- name: ellis-island-ellis-island-room-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crafty-painting.jpg
-- name: old-granary-field-oldhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-three.jpg
-- name: adam-smith-adam-smith-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-emily-carr.jpg
-- name: gypsymosaic-gypsy-eyes-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-light-dali.jpg
-- name: oldsmallboat-oldsmallboat-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
-- name: mistywoods-babyfoot-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-wols.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
-- name: school-clouds-church-clouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-constitution.jpg
-- name: dragon-desert-desert-dragon-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-green-zuma.jpg
-- name: adam-smith-adam-smith-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
-- name: nazi-invasion-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-sailboat-in-front-of-housing.jpg
-- name: oldbarn-oldbarn-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-pablo-blue.jpg
-- name: sand-hand-sand-hand-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-spagetti-accident.jpg
-- name: white-house-whitehouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-nazi-poster.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-- name: beach-rocks-beach-rocks-currents-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smoking-cigarette.jpg
-- name: braceros-domingo-ulloa-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gypsy-house-with-pen.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-5.jpg
-- name: machine-road-machine-road-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
-- name: berlinwall2-berlinwall-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-aqua.jpg
-- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: aws-s3-royalroads-royalroads-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still-600.jpg
+- name: mediterranean-mediterranean-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-matrix.jpg
+- name: carry-load-carryload-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
+- name: aws-s3-stories-new-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beachclouds-blue-circuit.jpg
+- name: bordercrossing-bordercrossing-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
+- name: bf-skinner-clowns_35893926114_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-clowns_35893926114_o.jpg
+- name: catacombs-catacombs-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-umberto-bocc.jpg
+- name: lincoln-memorial-lincolnmemorial-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-three.jpg
+- name: store-on-corner-store-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-color.jpg
+- name: statue-of-liberty-front-view-statueofliberty-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-cinnamon-rolls.jpg
+- name: liberty-back-statue-liberty-back-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-marcel-duchamp.jpg
+- name: white-house-whitehouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-mucha-mult.jpg
+- name: border-fence-border-fence-on-hill-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-storm.jpg
+- name: oldtrain-oldtrain-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dali-three.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-graham-sutherland.jpg
+- name: adam-smith-adam-smith-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-attack-planes.jpg
+- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+- name: old-gas-pumps-oldgaspumps-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-neo-instinct.jpg
+- name: la-muse-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-electric-tower-sun-behind.jpg
+- name: razorwire-DSC-0080-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-creativity.jpg
+- name: nyc-flag-nycflag-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-emily-carr.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-green-zuma.jpg
+- name: beach-clouds-lifeguard-beachclouds-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-creativity.jpg
+- name: braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-hallway-mirrors-hotel.jpg
+- name: bf-skinner-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-container-several-colors-grey.jpg
+- name: art-museum-art-museum-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
+- name: meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-cinnamon-rolls.jpg
+- name: christianity-christianity-under-construction-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
+- name: old-school-house-old-schoolhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-graham-sutherland.jpg
+- name: windowmountain-window-mountain-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-pond.jpg
+- name: white-house-lawn-white-house-lawn-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-wols.jpg
+- name: docks-docks-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-post-modern.jpg
+- name: nazi-invasion-white-house-close-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-close-up.jpg
+- name: liberty-back-statue-liberty-back-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-deep-connections.jpg
+- name: death-valley-death-valley-national-park-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-plentiful.jpg
+- name: bordercrossing-bordercrossing-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-emily-carr.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o.jpg
+- name: gypsy-wagon-gypsywagon-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-matrix.jpg
+- name: gypsymosaic-gypsy-eyes-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-space-pizza.jpg
+- name: nyc-flag-nycflag-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-color.jpg
+- name: stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: amusement-park-amusement-park-2-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-space-pizza.jpg
+- name: blossombar-green-zuma-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-50-62.jpg
+- name: old-door-lock-old-door-lock-2-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-soul.jpg
+- name: bordercrossing-bordercrossing-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-nazi-poster.jpg
+- name: docks-docks-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
+- name: capital-battle-capitolbattle-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
+- name: copper-circuit-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_1184.jpg
+- name: old-church-oldchurch-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-crafty-painting.jpg
 - name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-- name: stories-dragon-close-up-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
-- name: legal-statue-legalstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-asteroids.jpg
-- name: dragon-desert-desert-dragon-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
-- name: udnie-IMG_6441.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6441.jpg
-- name: blossombar-hot-spicy-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-50-62.jpg
-- name: udnie-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_E3643.jpg
-- name: old-granary-field-granaryfield-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-brush.jpg
-- name: aws-s3-stories-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellisisland-blue-circuit.jpg
-- name: aws-s3-stories-old-gas-pumps.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-gas-pumps.jpg
-- name: nazi-invasion-old-church-in-field.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-church-in-field.jpg
-- name: paris-paris-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-internet-numbers.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
-- name: oldroad-old-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-nazi-poster.jpg
 ---
 Record Holder Comanche Takes Lead In Sydney To Hobart Race.&nbsp;Logan's Water Cats Swim Well In First Ever Home Meet.&nbsp;West Coast Fishery Rebounds In Rare Conservation 'home Run'.&nbsp;Why A Personalized Diet Can Help You Achieve Better Results.&nbsp;New Administrator On Board.&nbsp;Beach Destination Wedding In Goa Relish The Beach View With Cidade De Goa.&nbsp;Texas Man Confesses To Killing Pregnant Sister.&nbsp;Will You Be Returning Or Exchanging Any Of Your Gifts?.&nbsp;
